// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with dir 1`] = `
<DocumentFragment>
  .cache-l8fwrw-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-l8fwrw-StyledText e13y3mga0"
      dir="rtl"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with htmlFor 1`] = `
<DocumentFragment>
  .cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-13w04ns-StyledText e13y3mga0"
      for="test"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-l8fwrw-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-l8fwrw-StyledText e13y3mga0"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="body" 1`] = `
<DocumentFragment>
  .cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-13w04ns-StyledText e13y3mga0"
  >
    body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmall" 1`] = `
<DocumentFragment>
  .cache-1szck82-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1szck82-StyledText e13y3mga0"
  >
    bodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-gfdp62-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-gfdp62-StyledText e13y3mga0"
  >
    bodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStronger" 1`] = `
<DocumentFragment>
  .cache-glfpjp-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-glfpjp-StyledText e13y3mga0"
  >
    bodySmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStrong" 1`] = `
<DocumentFragment>
  .cache-ulq9rt-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ulq9rt-StyledText e13y3mga0"
  >
    bodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStronger" 1`] = `
<DocumentFragment>
  .cache-1n8aews-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1n8aews-StyledText e13y3mga0"
  >
    bodyStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="caption" 1`] = `
<DocumentFragment>
  .cache-d080u3-StyledText {
  color: #3f4250;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-d080u3-StyledText e13y3mga0"
  >
    caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmall" 1`] = `
<DocumentFragment>
  .cache-kjssic-StyledText {
  color: #3f4250;
  font-size: 10px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-kjssic-StyledText e13y3mga0"
  >
    captionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="code" 1`] = `
<DocumentFragment>
  .cache-14u8o4b-StyledText {
  color: #3f4250;
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-14u8o4b-StyledText e13y3mga0"
  >
    code
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="heading" 1`] = `
<DocumentFragment>
  .cache-9nls9r-StyledText {
  color: #3f4250;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-9nls9r-StyledText e13y3mga0"
  >
    heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLarge" 1`] = `
<DocumentFragment>
  .cache-ov3chr-StyledText {
  color: #3f4250;
  font-size: 35px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 48px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ov3chr-StyledText e13y3mga0"
  >
    headingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmall" 1`] = `
<DocumentFragment>
  .cache-wiapn8-StyledText {
  color: #3f4250;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-wiapn8-StyledText e13y3mga0"
  >
    headingSmall
  </div>
</DocumentFragment>
`;

exports[`Text with disabled 1`] = `
<DocumentFragment>
  .cache-1xbi9br-StyledText {
  color: #b5b7bd;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1xbi9br-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with italic 1`] = `
<DocumentFragment>
  .cache-2fgkll-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-style: italic;
}

<div
    class="cache-2fgkll-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-9nls9r-StyledText {
  color: #3f4250;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-13w04ns-StyledText e13y3mga0"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-9nls9r-StyledText e13y3mga0"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;

exports[`Text with prominence stronger on non neutral 1`] = `
<DocumentFragment>
  .cache-4qjmng-StyledText {
  color: #b3144d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-4qjmng-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with underline 1`] = `
<DocumentFragment>
  .cache-ph8oq8-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="cache-ph8oq8-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;
